<resources>
    <string name="app_name" translatable="false">RxBSUIR</string>
    <!-- bsuir.by endpoint for retrofit -->
    <string name="schedule_endpoint" translatable="false">http://students.bsuir.by/api/v1</string>


    <!-- SNACKBAR -->
    <!-- Error message when something went wrong with schedule -->
    <string name="error_empty_schedule">Schedule is empty</string>
    <string name="error_network">No network connection</string>
    <string name="error_default">Something went wrong</string>
    <string name="action_retry">Retry</string>

    <!-- ADD GROUP/EMPLOYEE DIALOG -->
    <!-- Group number hint in add group dialog -->
    <string name="hint_group_number">Group number</string>
    <string name="hint_employee">Employee name</string>
    <string name="title_add_group">Add group</string>
    <string name="title_add_employee">Add employee</string>
    <string name="positive_add">Add</string>
    <string name="error_list_employee">Please choose employee from the list</string>
    <string name="error_list_group">Please choose group from the list</string>

    <!-- ADD NOTE DIALOG -->
    <string name="hint_note">Note</string>
    <string name="title_add_note">Add note</string>
    <string name="neutral_clear">Clear</string>

    <!-- MENU -->
    <string name="action_today">Current week</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_subgroup_filter">Subgroups</string>
    <string name="action_filter_both">First and second</string>
    <string name="action_filter_first">First only</string>
    <string name="action_filter_second">Second only</string>
    <string name="action_filter_none">Hide both</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_share_intent">Share via…</string>

    <!-- NAVIGATION VIEW -->
    <string name="navigation_view_groups">Groups</string>
    <string name="navigation_view_employees">Employees</string>
    <string name="navigation_view_send_feedback">Send feedback</string>
    <!-- Send feedback intent -->
    <string name="intent_feedback">Send feedback via…</string>
    <!-- Author email for feedback -->
    <string name="email_feedback" translatable="false">dmitry.rymarev@gmail.com</string>
    <!-- Feedback email subject -->
    <string name="subject_feedback" translatable="false">[Feedback] RxBSUIR</string>

    <array name="tabs">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
    </array>

    <array name="tabs_with_today">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
    </array>

    <!-- Main FAB tag for FAM -->
    <string name="tag_fab" translatable="false">fab</string>
    <string name="label_settings">Settings</string>

    <!-- PREFERENCES -->
    <string name="key_pref_dark_theme" translatable="false">is_dark_theme</string>
    <string name="title_pref_dark_theme">Dark theme</string>
    <string name="category_appearance">Appearance</string>
    <string name="category_about">About</string>
    <string name="title_build_version">Build version</string>
    <string name="key_pref_build_version" translatable="false">build_version</string>
    <string name="title_pref_rate_app">Rate app!</string>
    <string name="play_store_not_found">Play Store appears to be missing</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notification_time">Lessons notification time</string>
    <string name="summary_notification_sound_disabled">Notification sound is disabled</string>
    <string name="summary_notification_sound_enabled">Notification sound is enabled</string>
    <string name="title_notification_sound">Enable notification sound</string>
    <string name="title_is_today_enabled">Today and tomorrow tabs</string>
    <string name="title_are_circles_colored">Multicolored lesson type</string>
    <string name="title_is_fam_enabled">\"Add\" button</string>

    <!-- Title format portrait (Awesome C.T.)-->
    <string name="title_format" translatable="false">%s %.1s.%.1s.</string>

    <!-- FRAGMENTS -->
    <string name="empty_state_today">There are no lessons today.\nHave fun!</string>
    <string name="empty_state_tomorrow">There are no lessons tomorrow.\nHave fun!</string>
    <string name="empty_state_week">There are no lessons this week</string>

    <!-- LESSON ACTIVITY -->
    <string name="weekly">Weekly</string>
    <plurals name="week">
        <item quantity="one">Week %1s</item>
        <item quantity="few">Weeks %1s</item>
        <item quantity="many">Weeks %1s</item>
        <item quantity="other">Week %1s</item>
    </plurals>
    <string name="action_edit_note">Edit note</string>

    <!-- WIDGET -->
    <string name="widget_today">Today</string>
    <string name="widget_tomorrow">Tomorrow</string>
    <string name="widget_empty_synciditem">Add at least one group or employee from main app!</string>
    <string-array name="widget_subgroup_filter" translatable="false">
        <item>@string/action_filter_both</item>
        <item>@string/action_filter_first</item>
        <item>@string/action_filter_second</item>
        <item>@string/action_filter_none</item>
    </string-array>
    <string-array name="widget_subgroup_filter_values" translatable="false">
        <item>BOTH</item>
        <item>FIRST</item>
        <item>SECOND</item>
        <item>NONE</item>
    </string-array>
    <string name="widget_subgroup_filter_default" translatable="false">BOTH</string>
    <string name="widget_schedule">Schedule</string>
    <string name="widget_sync_id_item">Group/employee</string>
    <string name="widget_subgroup_filter" translatable="false">@string/action_subgroup_filter</string>
    <string name="widget_config_activity_label">Widget configuration</string>
    <string name="widget_action_done">Add</string>

    <!-- RATE APP DIALOG -->
    <string name="rad_title" translatable="false">@string/title_pref_rate_app</string>
    <string name="rad_neutral">Later</string>
    <string name="rad_positive">Rate</string>
    <string name="rad_negative">No, thanks</string>
    <string name="rad_content">If you like RxBSUIR, please take a moment to rate it in Google Play Store. Thank you for your support!</string>

    <!-- NOTIFICATION CHANNELS -->
    <string name="lesson_reminder_channel_name">Lessons reminder</string>

</resources>
