<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/widget_schedule">
    <Preference
        android:key="sync_id_item"
        android:title="@string/widget_sync_id_item"/>

    <ListPreference
        android:defaultValue="@string/widget_subgroup_filter_default"
        android:entries="@array/widget_subgroup_filter"
        android:entryValues="@array/widget_subgroup_filter_values"
        android:key="subgroup_filter"
        android:layout="@layout/preference_custom"
        android:title="@string/widget_subgroup_filter"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/category_appearance">

    <!--<CheckBoxPreference/>-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/key_pref_dark_theme"-->
        <!--android:title="@string/title_pref_dark_theme"/>-->

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="are_circles_colored"
        android:title="@string/title_are_circles_colored"/>

  </PreferenceCategory>

</PreferenceScreen>
