<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_items">
        <item
            android:id="@+id/action_today"
            android:icon="@drawable/ic_action_today"
            android:title="@string/action_today"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_refresh"
            android:orderInCategory="100"
            android:title="@string/action_refresh"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="200"
            android:title="@string/action_delete"
            app:showAsAction="never"/>
    </group>
</menu>